--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-./frontend/node_modules
-frontend/node_modules
+./frontend/node_modules/
+frontend/node_modules/
 backend/dist
-node_modules/node_modules/
+node_modules/
 node_modules/
