--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,8 +1,9 @@
 {
   "extends": "@tsconfig/node20/tsconfig.json",
   "compilerOptions": {
+    "esModuleInterop": true,
     "rootDir": "src/",
     "outDir": "dist/"
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*", "src/config"]
 }
