--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "concurrently": "^9.2.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "helmet": "^8.1.0",
     "pg": "^8.16.3",
     "sequelize": "^6.37.7"
   },
