--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "express": "^4.21.2",
     "fast-json-patch": "^3.1.1",
     "helmet": "^8.1.0",
+    "multer": "^2.0.2",
     "pg": "^8.16.3",
     "sequelize": "^6.37.7"
   },
   "devDependencies": {
     "@types/express": "^4.17.23",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.1.0",
     "@types/sequelize": "^4.28.20",
     "nodemon": "^3.1.10",
