--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@feathersjs/feathers": "^5.0.34",
     "@tsconfig/node20": "^20.1.6",
     "concurrently": "^9.2.0",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^4.21.2",
     "fast-json-patch": "^3.1.1",
