--- a/backend/server.config.json
+++ b/backend/server.config.json
@@ -18,7 +18,7 @@
       },
       "logging": false,
       "reset_db": true,
-      "seed_file": "backend/seed_data.json"
+      "seed_file": "backend../infrastructure/database/seeders/seed_data.json"
     }
   }
 }
