--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
   "dependencies": {
-    "@feathersjs/express": "^5.0.34",
-    "@feathersjs/feathers": "^5.0.34",
-    "@tsconfig/node20": "^20.1.6",
     "concurrently": "^9.2.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
-    "express": "^4.21.2",
+    "express": "^5.1.0",
     "fast-json-patch": "^3.1.1",
     "helmet": "^8.1.0",
     "multer": "^2.0.2",
@@ -14,7 +11,9 @@
     "sequelize": "^6.37.7"
   },
   "devDependencies": {
-    "@types/express": "^4.17.23",
+    "@tsconfig/node20": "^20.1.6",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.1.0",
     "@types/sequelize": "^4.28.20",
